--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -14,9 +14,9 @@
     <meta name="description" content="{{ site.data.project.description }}">
     <meta property="og:site_name" content="HTTP Structured Fields for PHP">
     <meta property="og:type" content="article">
-    <meta property="og:image" content="{{ site.baseurl }}/assets/img/stackwatch-logo.png">
+    <meta property="og:image" content="{{ site.baseurl }}/assets/img/stackwatch-emblem.svg">
     <meta property="og:description" content="{{ site.data.project.description }}">
-    <link rel="icon" href="{{ site.baseurl }}/assets/img/httpsf-logo.svg" type="image/svg+xml">
+    <link rel="icon" href="{{ site.baseurl }}/assets/img/stackwatch-emblem.svg" type="image/svg+xml">
     <title>{{ page.title }} - {{ site.data.project.title }}</title>
     <link rel="apple-touch-icon-precomposed" href="//theme.thephpleague.com/img/apple-touch-icon-precomposed.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
