--- a/docs/_layouts/redirect.html
+++ b/docs/_layouts/redirect.html
@@ -8,9 +8,9 @@
     <meta property="og:title" content="{{ site.data.project.tagline }} - {{ site.data.project.title }}">
     <meta property="og:site_name" content="HTTP Structured Fields for PHP">
     <meta property="og:type" content="article">
-    <meta property="og:image" content="{{ site.baseurl }}/assets/img/stackwatch-logo.png">
+    <meta property="og:image" content="{{ site.baseurl }}/assets/img/stackwatch-emblem.svg">
     <meta property="og:description" content="{{ site.data.project.description }}">
-    <link rel="icon" href="{{ site.baseurl }}/assets/img/httpsf-logo.svg" type="image/svg+xml">
+    <link rel="icon" href="{{ site.baseurl }}/assets/img/stackwatch-emblem.svg" type="image/svg+xml">
     <title>{{ page.title }} - {{ site.data.project.title }}</title>
     <meta http-equiv="refresh" content="0; url={{ page.redirect.to }}">
     <title>{{ site.data.project.tagline }} - {{ site.data.project.title }}</title>
