replace png by svg

--- a/docs/_layouts/redirect.html
+++ b/docs/_layouts/redirect.html
@@ -41,7 +41,7 @@
             {{ content }}
         </article>
         <div class="flex justify-center items-center">
-            <img src="{{ site.baseurl }}/assets/img/stackwatch,png" alt="Logo" class="w-[240px] sm:w-[250px] h-[80px] sm:h-[82px]"/>
+            <img src="{{ site.baseurl }}/assets/img/stackwatch-logo.svg" alt="Logo"/>
         </div>
     </div>
 </main>
