--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -29,7 +29,7 @@
     <header class="flex items-center sm:justify-center pl-6 pr-6 pb-6 max-w-7xl mx-auto pb-32">
         <div class="flex gap-6 md:gap-0 md:flex-row justify-between md:items-center p-3 md:p-6 w-full max-w-7xl">
             <a class="flex items-center gap-2 sm:gap-3" href="{{ site.baseurl }}/">
-                <img src="{{ site.baseurl }}/assets/img/stackwatch-logo.png" alt="Logo" class="w-[86px] sm:w-[70px] h-[86px] sm:h-[70px]"/>
+                <img src="{{ site.baseurl }}/assets/img/stackwatch-emblem.svg" alt="Logo" class="w-[86px] sm:w-[70px] h-[86px] sm:h-[70px]"/>
                 <div class="font-black text-3xl">Stack<span class="font-medium">watch</span></div>
             </a>
 
@@ -68,7 +68,7 @@
                 {{ content }}
             </article>
             <div class="flex justify-center items-center">
-                <img src="{{ site.baseurl }}/assets/img/stackwatch.png" alt="Logo" />
+                <img src="{{ site.baseurl }}/assets/img/stackwatch-logo.svg" alt="Logo"/>
             </div>
         </div>
     </main>
