--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -134,5 +134,6 @@
         </div>
     </footer>
 </div>
+<script src="{{ site.baseurl }}{{ site.data.manifest['docs.js'] }}"></script>
 </body>
 </html>
