--- a/docs/_layouts/redirect.html
+++ b/docs/_layouts/redirect.html
@@ -49,7 +49,7 @@
     <hr class="border-t border-light border-opacity-50 max-w-7xl mx-auto mb-16" />
 
     <div class="flex flex-col lg:flex-row gap-12 my-16 px-6 md:px-0">
-        <a href="https://bakame-php.github.io/http-structured-fields/" class="flex gap-3 lg:justify-between items-start transition-all hover-block">
+        <img src="{{ site.baseurl }}/assets/img/httpsf-logo.svg" alt="HTTP Structured Field Logo" class="w-[165px] sm:w-[120px] h-[96px] sm:h-[70px]" />
             <img src="{{ site.baseurl }}/assets/img/httpsf-logo.svg" alt="HTTP Structured Field Logo" class="w-[96px] sm:w-[70px] h-[96px] sm:h-[70px]" />
             <div class="flex flex-col">
                 <div class="font-black text-lg text-dark">HTTP Structured Field</div>
