--- a/docs/_layouts/homepage.html
+++ b/docs/_layouts/homepage.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="{{ site.data.project.description }}">
     <meta property="og:title" content="{{ site.data.project.tagline }} - {{ site.data.project.title }}">
-    <meta property="og:site_name" content="HTTP Structured Fields for PHP">
+    <meta property="og:site_name" content="Stackwatch - A minimalist multi-metric PHP Profiler.">
     <meta property="og:type" content="article">
     <meta property="og:image" content="{{ site.baseurl }}/assets/img/stackwatch-emblem.svg">
     <meta property="og:description" content="{{ site.data.project.description }}">
