--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -22,7 +22,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300;400;500&family=Onest:wght@300;400;500;600;700;900&display=swap" rel="stylesheet">
-    <link href="{{ site.baseurl }}{{ site.data.manifest['docs.css'] }}" rel="stylesheet">
+    <link href="{{ site.baseurl }}{{ site.data.manifest['docs.css'] }}?v={{ site.time | date:'%s' }}" rel="stylesheet">
 </head>
 <body class="bg-white text-dark font-onest antialiased relative">
 <div class="relative z-10">
@@ -134,6 +134,6 @@
         </div>
     </footer>
 </div>
-<script src="{{ site.baseurl }}{{ site.data.manifest['docs.js'] }}"></script>
+<script src="{{ site.baseurl }}{{ site.data.manifest['docs.js'] }}?v={{ site.time | date:'%s' }}"></script>
 </body>
 </html>
