--- a/docs/styles.css
+++ b/docs/styles.css
@@ -554,6 +554,81 @@ video {
   display: none;
 }
 
+#onthispage {
+  position: sticky;
+  top: 4.5rem;
+  display: none;
+  height: calc(100vh - 4.5rem);
+  width: 18rem;
+  align-self: flex-start;
+  overflow-y: auto;
+  padding-right: 2rem;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+@media (min-width: 1024px) {
+  #onthispage {
+    display: block;
+  }
+}
+
+@media (min-width: 1280px) {
+  #onthispage {
+    padding-right: 4rem;
+  }
+}
+
+#onthispage nav h3 {
+  font-weight: 600;
+  letter-spacing: -0.025em;
+  --tw-text-opacity: 1;
+  color: rgb(15 23 42 / var(--tw-text-opacity, 1));
+}
+
+#onthispage ul {
+  margin-top: 0.75rem;
+}
+
+#onthispage ul > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
+}
+
+#onthispage ul {
+  padding-left: 0.75rem;
+}
+
+#onthispage a {
+  display: block;
+  border-left-width: 2px;
+  border-color: transparent;
+  padding-left: 0.5rem;
+  text-decoration-line: none;
+}
+
+#onthispage a:hover {
+  text-decoration-line: underline;
+}
+
+.hover-text:hover #onthispage a:hover {
+  --tw-text-opacity: 1;
+  color: rgb(128 128 128 / var(--tw-text-opacity, 1));
+  text-decoration-line: none;
+}
+
+#onthispage .active {
+  --tw-border-opacity: 1;
+  border-left-color: rgb(184 16 103 / var(--tw-border-opacity, 1));
+  --tw-text-opacity: 1;
+  color: rgb(184 16 103 / var(--tw-text-opacity, 1));
+}
+
+.collapse {
+  visibility: collapse;
+}
+
 .static {
   position: static;
 }
@@ -673,12 +748,12 @@ video {
   height: 1.5rem;
 }
 
-.h-\[80px\] {
-  height: 80px;
-}
-
 .h-\[86px\] {
   height: 86px;
+}
+
+.h-\[96px\] {
+  height: 96px;
 }
 
 .h-\[calc\(100vh-4\.5rem\)\] {
@@ -687,10 +762,6 @@ video {
 
 .h-screen {
   height: 100vh;
-}
-
-.h-\[96px\] {
-  height: 96px;
 }
 
 .w-12 {
@@ -705,20 +776,20 @@ video {
   width: 16rem;
 }
 
-.w-\[240px\] {
-  width: 240px;
+.w-\[165px\] {
+  width: 165px;
 }
 
 .w-\[86px\] {
   width: 86px;
 }
 
-.w-full {
-  width: 100%;
-}
-
 .w-\[96px\] {
   width: 96px;
+}
+
+.w-full {
+  width: 100%;
 }
 
 .min-w-0 {
@@ -1032,6 +1103,10 @@ video {
 
 .font-semibold {
   font-weight: 600;
+}
+
+.lowercase {
+  text-transform: lowercase;
 }
 
 .tracking-tight {
@@ -1861,24 +1936,12 @@ img {
     height: 70px;
   }
 
-  .sm\:h-\[82px\] {
-    height: 82px;
-  }
-
-  .sm\:h-\[96px\] {
-    height: 96px;
-  }
-
-  .sm\:w-\[250px\] {
-    width: 250px;
+  .sm\:w-\[120px\] {
+    width: 120px;
   }
 
   .sm\:w-\[70px\] {
     width: 70px;
-  }
-
-  .sm\:w-\[96px\] {
-    width: 96px;
   }
 
   .sm\:grid-cols-1 {
